File->Data Preview->Batch Generate Preview failed #112632

Closed
opened 2023-09-20 17:23:37 +02:00 by Maxime-Roy · 8 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.99

Blender Version
Broken: version: 3.6.2, branch: blender-v3.6-release, commit date: 2023-08-16 16:43, hash: e53e55951e7a
Broken: 3.4.0
Worked: 3.3LTS

Caused by e8bcca4bdc

This Menu give a error and no work
File->Data Preview->Batch Generate Preview

Log : Previews generation process failed for file 'D:\Cours et Note\Blender Cours\Cours avec Mykol en Francais Blender 3.0\fichier du cours\xam Collection.blend'!

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.99 **Blender Version** Broken: version: 3.6.2, branch: blender-v3.6-release, commit date: 2023-08-16 16:43, hash: `e53e55951e7a` Broken: 3.4.0 Worked: 3.3LTS Caused by e8bcca4bdc947caaca6742cdefc60fb9a4f57e9a This Menu give a error and no work File->Data Preview->Batch Generate Preview Log : Previews generation process failed for file 'D:\Cours et Note\Blender Cours\Cours avec Mykol en Francais Blender 3.0\fichier du cours\xam Collection.blend'!
Maxime-Roy added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-09-20 17:23:38 +02:00
Member

Hi @Maxime-Roy , could you give us this xam Collection.blend file? Also is it always failing at this file?

Hi @Maxime-Roy , could you give us this `xam Collection.blend` file? Also is it always failing at this file?
Author

Still No work
Thanks

Still No work Thanks
Member

I can see it crashing, fails if you only have Materials & Textures checked

Read blend: "/08_Bugtracker_reports/112632/xam Collection.blend"


 *** Running /blender-3.6.2-linux-x64/3.6/scripts/modules/bl_previews_utils/bl_previews_render.py *** 

 *** Blend file /08_Bugtracker_reports/112632/xam Collection.blend *** 

render!
Fra:1 Mem:18.97M (Peak 19.65M) | Time:00:00.00 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Initializing
Fra:1 Mem:18.88M (Peak 19.65M) | Time:00:00.00 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Waiting for render to start
Fra:1 Mem:18.88M (Peak 19.65M) | Time:00:00.00 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Loading render kernels (may take a few minutes the first time)
Fra:1 Mem:18.88M (Peak 19.65M) | Time:00:00.00 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Scene
Fra:1 Mem:18.88M (Peak 19.65M) | Time:00:00.00 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Shaders
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Procedurals
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Background
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Camera
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Meshes Flags
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Objects
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Particle Systems
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Particle Systems | Copying Particles to device
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Meshes
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Mesh | Computing attributes
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Mesh | Copying Attributes to device
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Scene BVH | Building
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Scene BVH | Building BVH
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Scene BVH | Copying BVH to device
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Objects Flags
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Primitive Offsets
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Images
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Camera Volume
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Lookup Tables
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Lights
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Lights | Computing distribution
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Lights | Computing tree
Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Integrator
Fra:1 Mem:34.89M (Peak 34.89M) | Time:00:00.03 | Mem:16.00M, Peak:16.00M | Scene, View Layer | Updating Film
Fra:1 Mem:34.89M (Peak 34.89M) | Time:00:00.03 | Mem:16.00M, Peak:16.00M | Scene, View Layer | Updating Lookup Tables
Fra:1 Mem:34.89M (Peak 34.89M) | Time:00:00.03 | Mem:16.00M, Peak:16.00M | Scene, View Layer | Updating Baking
Fra:1 Mem:34.89M (Peak 34.89M) | Time:00:00.03 | Mem:16.00M, Peak:16.00M | Scene, View Layer | Updating Device | Writing constant memory
Fra:1 Mem:34.89M (Peak 34.89M) | Time:00:00.03 | Mem:16.00M, Peak:16.00M | Scene, View Layer | Sample 0/4096
Fra:1 Mem:34.97M (Peak 34.97M) | Time:00:00.03 | Remaining:00:03.33 | Mem:16.04M, Peak:16.04M | Scene, View Layer | Sample 1/4096
Fra:1 Mem:34.97M (Peak 34.97M) | Time:00:00.04 | Remaining:00:00.53 | Mem:16.04M, Peak:16.04M | Scene, View Layer | Sample 80/4096
Fra:1 Mem:34.97M (Peak 34.97M) | Time:00:00.04 | Remaining:00:00.57 | Mem:16.04M, Peak:16.04M | Scene, View Layer | Sample 0/4096
Fra:1 Mem:34.97M (Peak 34.97M) | Time:00:00.04 | Remaining:00:00.72 | Mem:16.04M, Peak:16.04M | Scene, View Layer | Finished
Writing: /tmp/xam Collection.crash.txt
I can see it crashing, fails if you only have Materials & Textures checked ``` Read blend: "/08_Bugtracker_reports/112632/xam Collection.blend" *** Running /blender-3.6.2-linux-x64/3.6/scripts/modules/bl_previews_utils/bl_previews_render.py *** *** Blend file /08_Bugtracker_reports/112632/xam Collection.blend *** render! Fra:1 Mem:18.97M (Peak 19.65M) | Time:00:00.00 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Initializing Fra:1 Mem:18.88M (Peak 19.65M) | Time:00:00.00 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Waiting for render to start Fra:1 Mem:18.88M (Peak 19.65M) | Time:00:00.00 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Loading render kernels (may take a few minutes the first time) Fra:1 Mem:18.88M (Peak 19.65M) | Time:00:00.00 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Scene Fra:1 Mem:18.88M (Peak 19.65M) | Time:00:00.00 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Shaders Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Procedurals Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Background Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Camera Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Meshes Flags Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Objects Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Particle Systems Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Particle Systems | Copying Particles to device Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Meshes Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Mesh | Computing attributes Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Mesh | Copying Attributes to device Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Scene BVH | Building Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Scene BVH | Building BVH Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Scene BVH | Copying BVH to device Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Objects Flags Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Primitive Offsets Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Images Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Camera Volume Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Lookup Tables Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Lights Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Lights | Computing distribution Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Lights | Computing tree Fra:1 Mem:18.89M (Peak 19.65M) | Time:00:00.02 | Mem:0.00M, Peak:0.00M | Scene, View Layer | Updating Integrator Fra:1 Mem:34.89M (Peak 34.89M) | Time:00:00.03 | Mem:16.00M, Peak:16.00M | Scene, View Layer | Updating Film Fra:1 Mem:34.89M (Peak 34.89M) | Time:00:00.03 | Mem:16.00M, Peak:16.00M | Scene, View Layer | Updating Lookup Tables Fra:1 Mem:34.89M (Peak 34.89M) | Time:00:00.03 | Mem:16.00M, Peak:16.00M | Scene, View Layer | Updating Baking Fra:1 Mem:34.89M (Peak 34.89M) | Time:00:00.03 | Mem:16.00M, Peak:16.00M | Scene, View Layer | Updating Device | Writing constant memory Fra:1 Mem:34.89M (Peak 34.89M) | Time:00:00.03 | Mem:16.00M, Peak:16.00M | Scene, View Layer | Sample 0/4096 Fra:1 Mem:34.97M (Peak 34.97M) | Time:00:00.03 | Remaining:00:03.33 | Mem:16.04M, Peak:16.04M | Scene, View Layer | Sample 1/4096 Fra:1 Mem:34.97M (Peak 34.97M) | Time:00:00.04 | Remaining:00:00.53 | Mem:16.04M, Peak:16.04M | Scene, View Layer | Sample 80/4096 Fra:1 Mem:34.97M (Peak 34.97M) | Time:00:00.04 | Remaining:00:00.57 | Mem:16.04M, Peak:16.04M | Scene, View Layer | Sample 0/4096 Fra:1 Mem:34.97M (Peak 34.97M) | Time:00:00.04 | Remaining:00:00.72 | Mem:16.04M, Peak:16.04M | Scene, View Layer | Finished Writing: /tmp/xam Collection.crash.txt ```
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Information from User
labels 2023-09-22 12:57:21 +02:00
Member

This reminds me of #105325 btw.
Some notes:

  • Eevee is fine, Cycles exposes something
  • calling bl_previews_render.py without --background survives

This broke between good ecf3435362 and bad 8a68f4f808 (but I cant bisect this atm. due to new compiler and at that time, there were newer GCC was not supported)

This reminds me of #105325 btw. Some notes: - Eevee is fine, Cycles exposes something - calling `bl_previews_render.py` without --background survives This broke between good ecf3435362cf and bad 8a68f4f80814 (but I cant bisect this atm. due to new compiler and at that time, there were newer GCC was not supported)
Member

Caused by e8bcca4bdc

CC @fclem
CC @mont29

Caused by e8bcca4bdc947caaca6742cdefc60fb9a4f57e9a CC @fclem CC @mont29
Philipp Oeser added
Interest
Viewport & EEVEE
and removed
Interest
Pipeline, Assets & IO
labels 2023-09-22 18:20:22 +02:00
Philipp Oeser added the
Interest
Render Pipeline
Interest
Render & Cycles
labels 2023-09-25 09:18:29 +02:00
Member

Even if the culprit commit is a bit older, will raise the prio since Batch Generate Preview is basically broken with Cycles

Even if the culprit commit is a bit older, will raise the prio since `Batch Generate Preview` is basically broken with Cycles
Philipp Oeser added
Severity
High
and removed
Severity
Normal
labels 2023-09-25 09:33:42 +02:00

Not sure why am tagged here. And why this is not assigned to render/eevee modules?

Not sure why am tagged here. And why this is not assigned to render/eevee modules?
Member

Sorry @mont29 , I thought this was of interest for you.
Pipeline, Assets & IO was the first user-facing module, but since we already know the culprit commit, it could be changed to Render & Cycles instead -- you can always do this on your own, no need to go into feedback loop, this was the idea, to pass this around modules if necessary.

Sorry @mont29 , I thought this was of interest for you. `Pipeline, Assets & IO` was the first user-facing module, but since we already know the culprit commit, it could be changed to `Render & Cycles` instead -- you can always do this on your own, no need to go into feedback loop, this was the idea, to pass this around modules if necessary.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-28 16:13:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112632
No description provided.